# ORCA-Optical-Replication-Control-Apparatus

./: ORCA_SOFTWARE_PAPER.md  README.md
firmware/: README.md
firmware/chamber-esp32/src/: Config.h  InputOutput.cpp  InputOutput.h  main.cpp
firmware/chamber-pi/src/: __init__.py  io_controller.py  lcd_display.py  main.py  usb_logger.py  web_server.py
firmware/chamber-pi/tests/: mock_hardware.py  test_chamber_logic.py
firmware/module-esp32/: platformio.ini
firmware/module-esp32/src/: main.cpp  main_transmit.cpp
firmware/satellite-firmware/: CLAUDE.md  CMakeLists.txt  sdkconfig
firmware/satellite-firmware/main/: CMakeLists.txt  EspHal.h  gps.c  gps.h  idf_component.yml  rs_transciever.c  rs_transciever.h  satellite-firmware.c  satellite-firmware.cpp
firmware/satellite-firmware/main/lp_core/: main.c
hardware/central-board/: #auto_saved_files#  _autosave-central-board.kicad_sch  central-board.csv  central-board.kicad_pcb  central-board.kicad_prl  central-board.kicad_pro  central-board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/satellite-board/: #auto_saved_files#  _autosave-sensors.kicad_sch  fp-info-cache  fp-lib-table  satellite-board.csv  satellite-board.kicad_pcb  satellite-board.kicad_prl  satellite-board.kicad_pro  satellite-board.kicad_sch  satellite-board.kicad_sch-bak  sym-lib-table  ~satellite-board.kicad_sch.lck
software/: README.md
software/chamber-pi/: CLAUDE.md  README.md  requirements.txt
software/pi0Chamber/: gg.py  pi_projection.py  proto.py  test.py
software/tests/: sensor_script.py
(+60 files in other folders)
